# agnes-agent

./: .gitignore  AGENTS.md  CODEBUDDY.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
ProjectPlan/: CLOUDFLARE_SYNC.md  DOCUMENT_PARSING.md  E2EE.md  LINUX_RELEASE.md  MEMORY_SYSTEM.md  MODEL_ROUTING.md  PROJECT.md  READ_WITH_AI.md  SKILLS.md  STORAGE_AND_RAG.md  TOOLS_AND_SANDBOX.md  UI_DESIGN.md  WEB_AND_MCP.md  architecture.md  claude-desktop-reconstruction.html  ui-design.md
agent/: agentd.py  pyproject.toml
agent/app/: __init__.py  graph.py  image.py  main.py  memory_extract.py  models.py  prompt.py  protocol.py  title.py
agent/tests/: smoke_sidecar.py  test_image.py  test_reasoning.py
document-parser/: document_parserd.py  pyproject.toml
document-parser/app/: __init__.py  parser.py
document-parser/tests/: smoke_parser.py  test_parser.py
pdf-parser/: build_package.py  download_models.py  pyproject.toml
pdf-parser/tests/: test_pdf_parser.py
scripts/: build-pdf-model-package.mjs  build-sidecar.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser.rs  document_parser.rs  embeddings.rs  error.rs  main.rs  mcp.rs  model_registry.rs  notifications.rs  pdf_models.rs  reading.rs  reading_context_menu.rs  secrets.rs  skills.rs  state.rs  user_profile.rs  web.rs
src-tauri/src/agent/: manager.rs  mod.rs  protocol.rs  ws_server.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: actor.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/db/repo/: agents.rs  artifacts.rs  explicit_memories.rs  knowledge.rs  memory.rs  messages.rs  mod.rs  model_providers.rs  notifications.rs  planner.rs  reading.rs  sessions.rs  settings.rs  storage.rs  sync.rs  tools.rs  workspaces.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/storage/: artifact_cache.rs  artifact_transfer.rs  credentials.rs  domain.rs  google_drive.rs  mod.rs  ports.rs  quark_drive.rs  r2.rs  registry.rs  service.rs
src-tauri/src/sync/: artifact.rs  auth.rs  client.rs  crypto.rs  engine.rs  hlc.rs  knowledge_artifact.rs  merge.rs  mod.rs  pairing.rs  payload.rs  protocol.rs  reading_artifact.rs  replication.rs  settings.rs
src-tauri/src/tools/: executor.rs  mod.rs  permissions.rs  policy.rs  review.rs  sandbox.rs  terminal.rs  workspace.rs
src-tauri/src/tools/builtin/: apply_patch.rs  clock.rs  file_edit.rs  file_read.rs  file_write.rs  git.rs  grep.rs  list_files.rs  memory_create.rs  memory_entry.rs  memory_md_edit.rs  memory_md_view.rs  memory_search.rs  memory_update.rs  mod.rs  planner.rs  shell.rs  web.rs
src/components/: AgentAvatar.tsx  AnimatedDisclosure.tsx  AppContextMenu.tsx  AppTitleBar.tsx  ChatWorkspace.tsx  ConfirmDialog.tsx  ContextUsageRing.test.tsx  ContextUsageRing.tsx  DriveWorkspace.tsx  KnowledgeWorkspace.tsx  MarkdownMessage.test.tsx  MarkdownMessage.tsx  ModifyMemoryModal.tsx  NotificationCenter.tsx  PlannerWorkspace.tsx  ProjectSelect.tsx  QuickWindow.tsx  ReadingWorkspace.tsx  SettingsModal.tsx  Sidebar.tsx  SkillSettingsTab.tsx  ThoughtDetails.tsx  TokenUsageCalendar.test.tsx  TokenUsageCalendar.tsx
src/components/planner/calendar/: CalendarFilters.tsx  CalendarWorkspace.tsx  DayAgenda.tsx  EventEditorDialog.tsx
src/components/planner/shared/: time.test.ts  time.ts  types.ts
src/components/planner/tasks/: QuickAdd.tsx  TaskDetailsDrawer.tsx  TodoWorkspace.tsx
src/components/ui/: button.tsx
src/lib/: driveSorting.test.ts  driveSorting.ts  features.ts  greetings.test.ts  greetings.ts  ipc.ts  memory.test.ts  memory.ts  readingPreferences.test.ts  readingPreferences.ts  sessionSearch.test.ts  sessionSearch.ts  skills.ts  storage.test.ts  storage.ts  syncStatus.test.ts  syncStatus.ts  uiPreferences.test.ts  uiPreferences.ts
src/store/: useAgentStore.test.ts  useAgentStore.ts
workers/sync-api/: README.md  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
workers/sync-api/migrations/: 0001_initial.sql  0002_bootstrap_dependency_order.sql  0003_secure_pairing.sql  0004_planner_bootstrap_order.sql  0005_artifact_objects.sql  0006_object_replica_gc.sql  0007_reading_bootstrap_order.sql
workers/sync-api/src/: auth.ts  errors.ts  index.ts  protocol.ts  request.ts  types.ts
workers/sync-api/src/db/: schema.ts
workers/sync-api/src/routes/: devices.ts  objects.ts  pairing.ts  sync.ts
workers/sync-api/test/: apply-migrations.ts  env.d.ts  sync.test.ts
