[project]
name = "agnes-agent-sidecar"
version = "0.1.0"
description = "agnes-agent Python reasoning sidecar (LangGraph)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "websockets>=12.0",
    # V0.2 引入：langgraph, langchain, litellm, fastapi, uvicorn, sentence-transformers
]

[tool.uv]
package = false
