[project]
name = "agnes-agent-sidecar"
version = "0.1.0"
description = "agnes-agent Python reasoning sidecar (LangGraph)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "websockets>=12.0",
    "langgraph>=0.1",
    "litellm>=1.0",
    "langchain-core>=0.2",
    "fastapi>=0.139.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
