[project]
name = "agnes-document-parser"
version = "0.1.0"
description = "Agnes isolated document parsing sidecar"
requires-python = ">=3.12"
dependencies = [
    "docling-slim[format-office]==2.113.0",
    "pypdfium2>=4.30,<5",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyinstaller>=6.0,<7.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
