[project]
name = "agnes-pdf-parser"
version = "0.1.0"
description = "Agnes optional local PDF parsing runtime"
requires-python = ">=3.12"
dependencies = [
    "docling-slim[feat-ocr-rapidocr-onnx,format-pdf,models-local]==2.113.0",
    "pypdfium2>=4.30,<5",
    "scipy>=1.6,<2",
    "torch==2.9.1+cpu",
    "torchvision==0.24.1+cpu",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pyinstaller>=6.0,<7.0",
    "pytest>=9.1.1",
    "reportlab>=4.0,<5.0",
]

[tool.pytest.ini_options]
pythonpath = ["../document-parser"]
testpaths = ["tests"]
