[package]
name = "agnes-agent"
version = "0.1.0"
description = "agnes-agent"
authors = ["agnes"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
anyhow = "1"
thiserror = "1"
sqlite-vec = "0.1.9"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-dialog = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
