[package]
name = "agnes-agent"
version = "0.1.0"
description = "agnes-agent"
authors = ["agnes"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
anyhow = "1"
thiserror = "1"
sqlite-vec = "0.1.9"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
async-trait = "0.1"
chrono = "0.4"
chrono-tz = "0.10"
globset = "0.4"
landlock = "0.4.5"
nix = { version = "0.31", features = ["process", "resource", "signal"] }
regex = "1"
walkdir = "2"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
keyring = "4.1.5"
diffy = "0.4"
base64 = "0.22"
chacha20poly1305 = { version = "0.11", features = ["zeroize"] }
zeroize = { version = "1", features = ["derive"] }
hkdf = "0.12"
spake2 = "0.4"
rrule = "0.14"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
roxmltree = "0.20"
percent-encoding = "2.3"
scraper = "0.27"
encoding_rs = "0.8"
rmcp = { version = "2.2.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
chromiumoxide = "0.9.1"
open = "5"
mime_guess = "2"
zstd = "0.13"
portable-pty = "0.9.0"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
gdk = "0.18"
gdkx11 = "0.18"
gtk = "0.18"
webkit2gtk = { version = "2.0.2", features = ["v2_8"] }
x11 = { version = "2.21", features = ["xlib"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
